add subtitle and contents

--- a/sections/07_technical_implementation.tex
+++ b/sections/07_technical_implementation.tex
@@ -11,9 +11,8 @@
 % SECTION 4.1: Technical Implementation and Execution (Rubric: Project Results - Weight 2)
 % ============================================================================
 
-\subsection{Technical Implementation and Execution}
-
-\subsubsection{Wireframe Integration and Design Adjustments}
+\subsubsection*{4.1.1 Wireframe Integration and Design Adjustments}
+\addcontentsline{toc}{subsubsection}{4.1.1 Wireframe Integration and Design Adjustments}
 
 The development of the prototype was based on the wireframe design previously discussed and documented. Overall, we retained the core structure established in the earlier wireframe, including the homepage layout, the sidebar’s basic structure and animation, the Māori language toggle, the map feature, the main search functionality, and the children’s mode.
 
@@ -31,7 +30,8 @@ In the children’s mode, we revised the exit logic, allowing users to more easi
 
 Lastly, we added a backend administration module, which includes features for adding new records and managing existing ones. This module is critical for content control, data entry, and permission management—functions essential for a system similar to a digital library.
 
-\subsubsection{From Figma to Code-Based Prototyping}
+\subsubsection*{4.1.2 From Figma to Code-Based Prototyping}
+\addcontentsline{toc}{subsubsection}{4.1.2 From Figma to Code-Based Prototyping}
 
 In the early stages of wireframing and prototyping, we used Figma as our primary tool. Figma is widely used for early-stage design and prototyping due to its rich design elements, transition animations, and built-in presentation mode. Its collaborative features also allowed us to work together online in real time, which greatly facilitated team coordination during the initial development phase.
 
@@ -43,7 +43,8 @@ For the interactive map component, we used the Leaflet library, which enabled ri
 
 Overall, the team collaboratively selected tools, designed reusable components, and implemented the final prototype through discussion and iteration. This process not only improved the quality of the final product but also deepened our understanding of frontend technologies and system architecture.
 
-\subsubsection{Team Collaboration and Technical Implementation}
+\subsubsection*{4.1.3 Team Collaboration and Technical Implementation}
+\addcontentsline{toc}{subsubsection}{4.1.3 Team Collaboration and Technical Implementation}
 
 The successful delivery of our prototype relied heavily on effective team collaboration. To simulate a professional working environment, we utilized Microsoft Teams for communication and GitHub for version control, aligning with standard practices in contemporary software development. These tools enabled structured coordination and efficient collaboration throughout the project lifecycle.
 
@@ -65,7 +66,8 @@ To validate design decisions and interaction flows, we conducted informal intern
 
 Finally, to ensure seamless delivery during the demonstration, the presentation slides were integrated directly into the prototype. All core features—including the homepage, map, search, Children’s Mode, admin panel, and multilingual interface—were functional and interconnected, forming a cohesive, interactive system that effectively conveys the project's goals and design philosophy.
 
-\subsubsection{Challenges and Difficulties}
+\subsubsection*{4.1.4 Challenges and Difficulties}
+\addcontentsline{toc}{subsubsection}{4.1.4 Challenges and Difficulties}
 
 From a technical perspective, we encountered several challenges. First, regarding language switching, we used JavaScript to dynamically load language packs. However, modern browsers block loading external files through the file:// protocol for security reasons. As a result, we had to use a local development server (e.g., http-server) to properly serve our project and enable resource loading via the http://localhost protocol. To manage language state, we used query parameters or hash-based routing and dynamically replaced page content via JavaScript.
 
