--- a/sections/08_prototype_overview.tex
+++ b/sections/08_prototype_overview.tex
@@ -6,17 +6,11 @@
 % ============================================================================
 
 % Add your LaTeX content below this line
-\section{Prototype Development and Features}
 
-\subsection{Home Page}
+\subsubsection*{4.2.1 Home Page}
+\addcontentsline{toc}{subsubsection}{4.2.1 Home Page}
 
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.8\textwidth]{screenshot/prototype_main.png}
-    \caption{Home page of the Lake Waikare Digital Library prototype}
-    \label{fig:prototype_main}
-\end{figure}
-
+[Placeholder for homepage image]
 In this project, the homepage is designed as the initial entry point for users accessing the system. It not only serves to introduce the core functions of the website but also acts as the first step in establishing a culturally rich atmosphere. Therefore, careful attention was given to interface layout, functional integration, visual design, and accessibility throughout multiple iterations.
 
 The homepage adopts a long-scroll layout. At the top of the page is a navigation bar that includes the project name, a search box, and essential navigation elements such as Help, Contact Us, and Settings. User guidance and account access are also positioned here, offering users quick access to frequently used features.
@@ -37,7 +31,8 @@ Compared to the initial design, the final version retains the top navigation bar
 
 In summary, the homepage reflects thoughtful consideration of both adult and child user needs in terms of information architecture, visual language, and functional guidance. It serves as both a "gateway" and a "bridge" within the system, laying the foundation for a meaningful and engaging user experience.
 
-\subsection{Explore Page}
+\subsection*{4.2.2 Explore Page}
+\addcontentsline{toc}{subsubsection}{4.2.2 Explore Page}
 [Placeholder for Explore page screenshot]
 
 The Explore page is designed for users who are interested in discovering content but do not have a specific query in mind. It features a two-column layout: the right side presents an interactive map, while the left side displays a content panel that guides user exploration. The design emphasizes both informational guidance and visual appeal, encouraging users to explore records based on themes and categories.
@@ -50,7 +45,8 @@ Compared to the earlier version, the most significant improvement is that users 
 
 By centering the map as the main medium and complementing it with categorized visuals and textual prompts, the Explore page offers an intuitive and layered platform for discovery. Its design promotes interactivity, discoverability, and immersion—making it one of the most engaging interfaces in the system for sparking user curiosity and participation.
 
-\subsection{Map Layers Page}
+\subsection*{4.2.3 Map Layers Page}
+\addcontentsline{toc}{subsubsection}{4.2.3 Map Layers Page}
 [Insert Image Placeholder Here]
 
 The Layers Page plays a crucial role in helping users gain a deeper understanding of the map data. By organizing layers into clear categories, the page allows users to flexibly select the data views they need, enhancing the interactivity and multidimensional presentation of the map information.
@@ -67,7 +63,8 @@ Compared to earlier versions, the current design strengthens the logical classif
 
 In summary, the Layers Page enhances users' ability to explore map data through a scientific classification system and flexible interaction design. This page not only offers a clear interface for managing layers but also serves as a key bridge within the overall information architecture, supporting users to delve deeper into the rich cultural and environmental information behind the project.
 
-\subsection{Map View Page}
+\subsection*{4.2.4 Map View Page}
+\addcontentsline{toc}{subsubsection}{4.2.4 Map View Page}
 [Insert image placeholder]
 
 The Map View page can be accessed either through the "Explore Map" button on the Home page or via the navigation buttons in the left sidebar, allowing users to seamlessly enter the map interface from different contexts. This flexibility ensures that both first-time visitors and returning users can easily navigate to and engage with the core features of the application.
@@ -80,7 +77,8 @@ From an interaction standpoint, the update goes beyond traditional popups by int
 
 Overall, the Map View page focuses on a clean design and practical functionality. By combining multiple map layers and enriched interactive features, it serves as the central entry point to the application's data space. As one of the core features of the application, the Map View bridges geographical data with cultural and historical records, allowing users to gain multi-dimensional insight into the Lake Waikare area. This reinforces the educational value of the platform and enhances user experience through intuitive, immersive exploration.
 
-\subsection{Search Page}
+\subsection*{4.2.5 Search Page}
+\addcontentsline{toc}{subsubsection}{4.2.5 Search Page}
 [Insert image placeholder]
 
 The main search interface is located on the left side of the page, with a search bar at the top of the sidebar. The placeholder text reads "Search stories, places…" Users can enter keywords or place names to quickly find relevant content. The search bar is designed to be simple and intuitive, supporting fuzzy matching and multiple keyword combinations to help users efficiently locate the information they need.
@@ -93,7 +91,8 @@ The page also offers a date range selector, allowing users to restrict search re
 
 Overall, the Search Page serves as a core function for quickly locating information. Through rich filtering options and flexible scope controls, it helps users efficiently extract needed content from large and complex datasets. Whether for casual browsing or professional research, this page provides a convenient and precise retrieval channel, greatly enhancing system usability and user experience.
 
-\subsection{Child Mode}
+\subsection*{4.2.6 Child Mode}
+\addcontentsline{toc}{subsubsection}{4.2.6 Child Mode}
 [Insert Image Placeholder]
 
 Child Mode is designed to provide children with a fun, safe, and age-appropriate environment to interact with the content, encouraging exploration and learning of Māori culture through a child-friendly approach. The interface features simplified navigation with large buttons, minimal text, and bright, high-contrast colors that match children's interaction patterns, making the website easy to use.
@@ -112,7 +111,8 @@ Overall, the platform aims to make historical and cultural content accessible an
 
 Child Mode is designed with a focus on usability, engagement, safety, and cultural authenticity.
 
-\subsection{Browse Records Page}
+\subsection*{4.2.7 Browse Records Page}
+\addcontentsline{toc}{subsubsection}{4.2.7 Browse Records Page}
 [Insert Image Placeholder]
 
 The Browse Records page serves as a vital gateway for users to deeply explore the rich and diverse cultural and environmental resources within the project. The design thoughtfully incorporates multi-dimensional filtering and flexible display options to meet the varied needs of different users. At the top of the page lies a comprehensive filtering and display control panel, where users can quickly locate relevant content by entering keywords or place names into the search box, enabling efficient and precise searches.
@@ -125,7 +125,8 @@ The main body of the page presents all records matching the selected criteria in
 
 Overall, the Browse Records page combines powerful filtering capabilities, diverse display modes, and smart sorting functions to significantly enhance search efficiency and browsing convenience. This page not only improves user experience but also provides robust technical support and a user-friendly platform for the dissemination and preservation of cultural and environmental information.
 
-\subsection{Record View Page}
+\subsection*{4.2.8 Record View Page}
+\addcontentsline{toc}{subsubsection}{4.2.8 Record View Page}
 [Insert Image Placeholder]
 
 The Record Detail Page can be accessed directly from the search results on the "Browse Records" page or by clicking on location markers on the map, allowing users to view detailed content from multiple entry points. At the top of the page, the record's title is prominently displayed, with clear information about the associated collection, relevant time period, and geographic location shown directly below. These details provide users with a comprehensive contextual framework to quickly understand the temporal and spatial background of the record.
@@ -138,7 +139,8 @@ On the right side of the page, there is a multimedia display area categorized in
 
 The overall page design adheres to principles of clear information hierarchy, convenient interaction, and visual comfort. It ensures the content is both deep and authoritative while emphasizing smooth browsing and ease of use, aiming to create a comprehensive and engaging platform for exploring cultural heritage and historical information.
 
-\subsection{Admin Dashboard}
+\subsection*{4.2.9 Admin Dashboard}
+\addcontentsline{toc}{subsubsection}{4.2.9 Admin Dashboard}
 [picture placeholder]
 The Admin Dashboard serves as a critical backend module for users with administrative permissions, enabling the creation, editing, and overall management of cultural records. This system supports the sustainable growth of content and ensures the integrity and accuracy of the cultural knowledge presented on the platform. Currently, the dashboard contains two key functions: record creation and record management. Together, these features support a complete workflow for content governance.
 
