Add .gitignore and update lessons learned, challenges, future work & conclusion sections

--- a/sections/12_lessons_learned_enhanced.tex
+++ b/sections/12_lessons_learned_enhanced.tex
@@ -7,3 +7,11 @@
 
 % Add your LaTeX content below this line
 
+Several key insights guided our process of translating sketches into a working prototype.
+This project primary has three main objectives: preserving Māori culture and heritage connected to Lake Waikare, engaging younger generations with their heritage, and raising awareness of the lake’s environmental degradation.
+To achieve this goal, firstly, we built on Greenstone’s native multi-collection framework but went further by each collection to geospatial locations and introducing custom Lake Waikare map layers.
+Users start with a clear bilingual translation function with maori and finally drill down into detailed collections and layer views.
+This structured approach simplifies complexity and enables intuitive navigation.
+On the cultural sensitivity and technical implementation side, we added a secure backend admin interface. Administrators can monitor and manage every record; it not only protects local indigenous stories and language but also prevents unintended privacy exposures. This governance ensures the integrity and confidentiality of cultural content and aligns with best practices for digital heritage management.
+
+
