--- a/sections/13_challenges_professional_development.tex
+++ b/sections/13_challenges_professional_development.tex
@@ -7,3 +7,11 @@
 
 % Add your LaTeX content below this line
 
+Our biggest challenge was not being able to secure weekly stakeholder feedback, although our project manager did give us a wealth of suggestions each week.
+We began with paper sketches to map out data flow and identify key system components. We decided the map system would include a cartoon mode, a 3D view, and a GIS layer all linked to our story module and database.
+Next, we researched existing platforms layers of London and Green stone digital library that combine mapping with storytelling to inform our approach.
+With those examples in mind, we moved on to designing our wireframes, starting with the homepage. We sketched out a sidebar featuring Home, Layer, Search, and Explore, then stretched those ideas into a more detailed layout.
+We sketched out a sidebar featuring Home, Layer, Search, and Explore, then stretched those ideas into a more detailed layout. After that, we added a footer and cartoon-mode verification functionality to our design.
+We decided to use HTML and JavaScript to build our website and Bootstrap for our user tour and presentation, since we believed this would be an efficient way to onboard first-time visitors. During this process, we learned how to use Figma, manage a project, and collaborate with people from different cultures. Eventually, we were able to provide weekly updates to our project manager.
+
+
