--- a/sections/14_future_work_learning.tex
+++ b/sections/14_future_work_learning.tex
@@ -7,3 +7,11 @@
 
 % Add your LaTeX content below this line
 
+In the next phase, we will implement the Lake Waikare Digital Library with several new features.
+First, a decade-scale time slider will allow users to visualize environmental changes such as shifting time sliders over multiple decades, broaden their understanding of the lake’s ecological history and reinforcing our dual mission of preserving Māori heritage alongside environmental data.
+Second, we will introduce a child-friendly cartoon map mode complete with animated guide character and game-like interactions, making it easier and more engaging for younger audiences to explore cultural narratives and ecological facts in an age-appropriate, enthusiastic format.
+Third, we plan to implement 360\textdegree{} panoramic tours of select lakeside locations. By virtually transporting users to traditional fishing grounds, sacred sites, and changing shorelines, these immersive tours will provide rich contextual insights and strengthen emotional connections to place especially for those unable to visit in person. Each of these enhancements will be developed iteratively, guided by ongoing user testing and stakeholder feedback, to ensure they add genuine value while maintaining technical robustness and cultural respect. Fourth, we plan to expand our current bilingual approach by implementing a translation management system.
+This will ensure that English and Māori content remain accurate, consistent, and up to date, while also laying the groundwork for future inclusion of additional languages—thereby broadening the library’s accessibility and community reach.
+
+
+
