--- a/sections/15_conclusion.tex
+++ b/sections/15_conclusion.tex
@@ -7,3 +7,9 @@
 
 % Add your LaTeX content below this line
 
+The prototype of the Lake Waikare Digital Library has successfully combined user friendly design, environmental awareness, and cultural preservation.
+We developed a user-friendly, bilingual interface that leads users from high-level discovery to in-depth exploration of Māori heritage and ecological data by incorporating geospatial ties and custom map layers into Greenstone's multi-collection framework.
+Indigenous stories and community contributions are safeguarded and treated with the dignity they merit thanks to our secure backend.
+We are dedicated to iterative improvement, and the addition of a decade-scale time slider, a kid-friendly map mode, 360° panoramic tours, and a strong translation management system will all contribute to the library's increased value.
+In order to ensure that Lake Waikare's stories flourish as a dynamic, participatory digital resource, we will keep involving users and stakeholders through testing and feedback. In the end, this platform hopes to inspire future generations to value and preserve this important cultural and environmental gem in addition to documenting the lake's past and present.
+
