Add picture in report

--- a/sections/08_prototype_overview.tex
+++ b/sections/08_prototype_overview.tex
@@ -10,7 +10,12 @@
 \subsubsection*{4.2.1 Home Page}
 \addcontentsline{toc}{subsubsection}{4.2.1 Home Page}
 
-[Placeholder for homepage image]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_main.png}
+    \caption{Home Page}
+    \label{fig:architecture}
+\end{figure}
 In this project, the homepage is designed as the initial entry point for users accessing the system. It not only serves to introduce the core functions of the website but also acts as the first step in establishing a culturally rich atmosphere. Therefore, careful attention was given to interface layout, functional integration, visual design, and accessibility throughout multiple iterations.
 
 The homepage adopts a long-scroll layout. At the top of the page is a navigation bar that includes the project name, a search box, and essential navigation elements such as Help, Contact Us, and Settings. User guidance and account access are also positioned here, offering users quick access to frequently used features.
@@ -33,7 +38,12 @@ In summary, the homepage reflects thoughtful consideration of both adult and chi
 
 \subsection*{4.2.2 Explore Page}
 \addcontentsline{toc}{subsubsection}{4.2.2 Explore Page}
-[Placeholder for Explore page screenshot]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_explore.png}
+    \caption{Explore Page}
+    \label{fig:architecture}
+\end{figure}
 
 The Explore page is designed for users who are interested in discovering content but do not have a specific query in mind. It features a two-column layout: the right side presents an interactive map, while the left side displays a content panel that guides user exploration. The design emphasizes both informational guidance and visual appeal, encouraging users to explore records based on themes and categories.
 
@@ -47,7 +57,12 @@ By centering the map as the main medium and complementing it with categorized vi
 
 \subsection*{4.2.3 Map Layers Page}
 \addcontentsline{toc}{subsubsection}{4.2.3 Map Layers Page}
-[Insert Image Placeholder Here]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_overlay.png}
+    \caption{Overlays Page}
+    \label{fig:architecture}
+\end{figure}
 
 The Layers Page plays a crucial role in helping users gain a deeper understanding of the map data. By organizing layers into clear categories, the page allows users to flexibly select the data views they need, enhancing the interactivity and multidimensional presentation of the map information.
 
@@ -65,7 +80,12 @@ In summary, the Layers Page enhances users' ability to explore map data through 
 
 \subsection*{4.2.4 Map View Page}
 \addcontentsline{toc}{subsubsection}{4.2.4 Map View Page}
-[Insert image placeholder]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_mapview.png}
+    \caption{Map View Page}
+    \label{fig:architecture}
+\end{figure}
 
 The Map View page can be accessed either through the "Explore Map" button on the Home page or via the navigation buttons in the left sidebar, allowing users to seamlessly enter the map interface from different contexts. This flexibility ensures that both first-time visitors and returning users can easily navigate to and engage with the core features of the application.
 
@@ -79,7 +99,12 @@ Overall, the Map View page focuses on a clean design and practical functionality
 
 \subsection*{4.2.5 Search Page}
 \addcontentsline{toc}{subsubsection}{4.2.5 Search Page}
-[Insert image placeholder]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_search.png}
+    \caption{Search Page}
+    \label{fig:architecture}
+\end{figure}
 
 The main search interface is located on the left side of the page, with a search bar at the top of the sidebar. The placeholder text reads "Search stories, places…" Users can enter keywords or place names to quickly find relevant content. The search bar is designed to be simple and intuitive, supporting fuzzy matching and multiple keyword combinations to help users efficiently locate the information they need.
 
@@ -93,7 +118,12 @@ Overall, the Search Page serves as a core function for quickly locating informat
 
 \subsection*{4.2.6 Child Mode}
 \addcontentsline{toc}{subsubsection}{4.2.6 Child Mode}
-[Insert Image Placeholder]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_childmode.png}
+    \caption{Child Mode}
+    \label{fig:architecture}
+\end{figure}
 
 Child Mode is designed to provide children with a fun, safe, and age-appropriate environment to interact with the content, encouraging exploration and learning of Māori culture through a child-friendly approach. The interface features simplified navigation with large buttons, minimal text, and bright, high-contrast colors that match children's interaction patterns, making the website easy to use.
 
@@ -113,7 +143,12 @@ Child Mode is designed with a focus on usability, engagement, safety, and cultur
 
 \subsection*{4.2.7 Browse Records Page}
 \addcontentsline{toc}{subsubsection}{4.2.7 Browse Records Page}
-[Insert Image Placeholder]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_records.png}
+    \caption{Records Page}
+    \label{fig:architecture}
+\end{figure}
 
 The Browse Records page serves as a vital gateway for users to deeply explore the rich and diverse cultural and environmental resources within the project. The design thoughtfully incorporates multi-dimensional filtering and flexible display options to meet the varied needs of different users. At the top of the page lies a comprehensive filtering and display control panel, where users can quickly locate relevant content by entering keywords or place names into the search box, enabling efficient and precise searches.
 
@@ -127,7 +162,12 @@ Overall, the Browse Records page combines powerful filtering capabilities, diver
 
 \subsection*{4.2.8 Record View Page}
 \addcontentsline{toc}{subsubsection}{4.2.8 Record View Page}
-[Insert Image Placeholder]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_single_record.png}
+    \caption{Single Record Page}
+    \label{fig:architecture}
+\end{figure}
 
 The Record Detail Page can be accessed directly from the search results on the "Browse Records" page or by clicking on location markers on the map, allowing users to view detailed content from multiple entry points. At the top of the page, the record's title is prominently displayed, with clear information about the associated collection, relevant time period, and geographic location shown directly below. These details provide users with a comprehensive contextual framework to quickly understand the temporal and spatial background of the record.
 
@@ -141,13 +181,30 @@ The overall page design adheres to principles of clear information hierarchy, co
 
 \subsection*{4.2.9 Admin Dashboard}
 \addcontentsline{toc}{subsubsection}{4.2.9 Admin Dashboard}
-[picture placeholder]
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_dashboard.png}
+    \caption{Dashboard Page}
+    \label{fig:architecture}
+\end{figure}
 The Admin Dashboard serves as a critical backend module for users with administrative permissions, enabling the creation, editing, and overall management of cultural records. This system supports the sustainable growth of content and ensures the integrity and accuracy of the cultural knowledge presented on the platform. Currently, the dashboard contains two key functions: record creation and record management. Together, these features support a complete workflow for content governance.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_dashboard_createrecord.png}
+    \caption{Dashboard Record Create Page}
+    \label{fig:architecture}
+\end{figure}
 In the record creation page, administrators can input a new cultural record using a structured form that collects essential information such as the record title, author, collection name, and time period. The time input allows for both precise dates and flexible time ranges to accommodate records that may lack exact temporal references. An important feature of this interface is the ability to mark whether the content is considered sensitive. Sensitive records are only accessible to specific groups with appropriate permissions, a mechanism that helps protect Indigenous knowledge from inappropriate or unauthorized use. As part of this access control strategy, the system integrates Traditional Knowledge (TK) Labels. These labels provide culturally respectful indicators regarding how the record should be accessed or shared. For example, a TK label may restrict a record's visibility to members of a particular iwi or clarify that certain content should not be widely distributed. By embedding TK Labels into the metadata structure, the system aligns with principles of Indigenous data sovereignty and supports ethical content management practices.
 
 To enrich the cultural record, the creation interface also supports uploading associated media such as documents, images, videos, and audio recordings. Each of these media types can be individually linked to the record, enhancing its narrative and educational value. In terms of spatial data, administrators can add a location to the record by clicking a map interaction button. This opens a dialog with a visual map, where users can drop a pin to define the exact geographic location, automatically capturing the latitude and longitude for future use within the map-based interface. At the bottom of the page, users are given the option to preview the record, save it as a draft, or publish it directly, depending on the stage of the editorial workflow.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{screenshot/prototype_dashboard_managerecord.png}
+    \caption{Dashboard Record Manager Page}
+    \label{fig:architecture}
+\end{figure}
 The record management page allows administrators to review, update, or delete existing entries. It provides a search interface with multiple filtering options, including title, content, collection, status, and date range. This functionality allows for efficient retrieval of records, especially as the dataset grows in volume. When viewing a specific record from the list, a dialog window displays the record's full metadata, which can be edited. After editing, users can preview the changes, cancel the update, delete the record, or save the modification. The design of the interface supports intuitive operation while ensuring data integrity and minimizing the risk of accidental changes.
 
 To support long-term preservation and structured organization of cultural materials, the platform will integrate Greenstone as its data repository. Developed by the University of Waikato in New Zealand, Greenstone is an open-source digital library system well-suited for managing multilingual, multimedia, and culturally significant content. Its robust metadata management, full-text indexing, and cross-format compatibility make it an ideal choice for storing and accessing Indigenous knowledge. By leveraging Greenstone, the platform ensures the durability of its digital archive and lays the groundwork for future interoperability and scholarly research.
