--- a/sections/appendix_a_design.tex
+++ b/sections/appendix_a_design.tex
@@ -5,5 +5,178 @@
 % This file maps to the rubric-optimized report structure
 % ============================================================================
 
-% Add your LaTeX content below this line
+% Preliminary Design Stage
+\subsection{Preliminary Design Stage}
+\begin{figure}[H]
+  \centering
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/priliminary_design.png}
+    \caption{Design}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/priliminary_feature.png}
+    \caption{Feature}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/priliminary_methods.png}
+    \caption{Methods}
+  \end{subfigure}
+
+  \vspace{0.5cm}
+
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/priliminary_milestones.png}
+    \caption{Milestones}
+  \end{subfigure}
+  \caption{Preliminary Design Stage Images}
+  \label{fig:preliminary}
+\end{figure}
+
+% Wireframe Stage
+\subsection{Wireframe Stage}
+\begin{figure}[H]
+  \centering
+  % line 1
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_llm.png}
+    \caption{LLM}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_login.png}
+    \caption{Login}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_main.png}
+    \caption{Main}
+  \end{subfigure}
+
+  \vspace{0.5cm}
+
+  % line 2
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_map_interaction.png}
+    \caption{Map Interaction}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_overlay2.png}
+    \caption{Overlay 2}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_overlays.png}
+    \caption{Overlays}
+  \end{subfigure}
+
+  \vspace{0.5cm}
+
+  % line 3
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_search.png}
+    \caption{Search}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_search2.png}
+    \caption{Search 2}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_sidepanel.png}
+    \caption{Side Panel}
+  \end{subfigure}
+
+  \vspace{0.5cm}
+
+  % line 4
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/wireframe_changemap.png}
+    \caption{Change Map}
+  \end{subfigure}
+
+  \caption{Wireframe Stage Images}
+  \label{fig:wireframe}
+\end{figure}
+
+% Prototype Stage
+\subsection{Prototype Stage}
+\begin{figure}[H]
+  \centering
+  % line 1
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_main1.png}
+    \caption{Main 1}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_main2.png}
+    \caption{Main 2}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_main3.png}
+    \caption{Main 3}
+  \end{subfigure}
+
+  \vspace{0.5cm}
+
+  % line 2
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_maori_language.png}
+    \caption{Maori Language}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_childmode.png}
+    \caption{Child Mode}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_mapview.png}
+    \caption{Map View}
+  \end{subfigure}
+
+  \vspace{0.5cm}
+
+  % line 3
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_dashboard_createrecord.png}
+    \caption{Dashboard Create Record}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_dashboard_managerecord.png}
+    \caption{Dashboard Manage Record}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_dashboard.png}
+    \caption{Dashboard}
+  \end{subfigure}
+
+  \vspace{0.5cm}
+
+  % line 4
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_explore.png}
+    \caption{Explore}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_overlay.png}
+    \caption{Overlay}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_records.png}
+    \caption{Records}
+  \end{subfigure}
+
+  \vspace{0.5cm}
+
+  % line 5
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_search.png}
+    \caption{Search}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_single_record.png}
+    \caption{Single Record}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{screenshot/prototype_main.png}
+    \caption{Main}
+  \end{subfigure}
+
+  \caption{Prototype Stage Images}
+  \label{fig:prototype}
+\end{figure}
 
