adjust caption and delete the index of useability

--- a/sections/appendix_a_design.tex
+++ b/sections/appendix_a_design.tex
@@ -133,11 +133,11 @@
   % line 3
   \begin{subfigure}[b]{0.3\textwidth}
     \includegraphics[width=\textwidth]{screenshot/prototype_dashboard_createrecord.png}
-    \caption{Dashboard Create Record}
+    \caption{Create Record}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.3\textwidth}
     \includegraphics[width=\textwidth]{screenshot/prototype_dashboard_managerecord.png}
-    \caption{Dashboard Manage Record}
+    \caption{Manage Record}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.3\textwidth}
     \includegraphics[width=\textwidth]{screenshot/prototype_dashboard.png}
